<resources>
    <string name="app_name">Blue Duck</string>
    <string-array name="page_top_one_array">
        <item>Wear a Helmet</item>
        <item>Find Your Duck</item>
        <item>Scan Your Duck</item>
        <item>How to Stand</item>
        <item>Give it Some Gas</item>
        <item>Give it a Brake</item>
        <item>Fly Safely!</item>
        <item>How to Land</item>
        <item>Something Wrong?</item>
    </string-array>
    <string-array name="page_top_two_array">
        <item>Follow your local laws and fly safely!</item>
        <item>Locate the nearest Duck to you</item>
        <item>Register the Duck you spotted</item>
        <item>Put your dominant foot forward to balance</item>
        <item>Kick off to start and press down on the toggle to increase your speed</item>
        <item>Gradually squeeze to reduce speed safely</item>
        <item>Soar to your destination. \n *Follow your local sidewalk laws.</item>
        <item>Land out of harm\'s way at your favorite spots for other Flock members to find</item>
        <item>Report your Duck through the app menu so we can take care of it</item>
    </string-array>
    <string name="blank">&#160;</string>
    <string name="next">Next</string>
    <string name="fly_now">Fly Now</string>
    <string name="login_description_text">Enter your email to start enjoying Blue Duck!</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="start_riding">Start Riding</string>
    <string name="password_description_text">Enter your password to log in</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="personal_information_title">Personal Information</string>
    <string name="personal_information_description">Complete the fields below to create an account.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="create_account">Create Account</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="the_account_already_exists">This account already exists.</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="verification_top_description">We sent a verification code to your email. Please insert the code below:</string>
    <string name="resending_code">Resending verification code in</string>
    <string name="resend">Resend</string>
    <string name="verification">Verification</string>
    <string name="date_picker">DatePicker</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="enter_card">Add Card</string>
    <string name="scan_card">Scan Card</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="exp_date">Exp Date</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="i_agree">I Agree</string>
    <string name="i_agree_text">By checking this box you agree to our terms of use.</string>
    <string name="scan_driver_license_text">Scan Your Drivers License</string>
    <string name="scan_driver_license_description_text">This in formation is to lorem ipsum dolor sit amet,consectetur adipiscing elit.</string>
    <string name="do_this_later">Must be 18 and over to ride.</string>
    <string name="scan_now">Scan Now</string>
    <string name="enable_location_text">Please Enable Your Location</string>
    <string name="yes_enable">Yes, Enable</string>
    <string name="forget_password">Forgot Password</string>
    <string name="countries_and_regions">Countries and Regions</string>
    <string name="select_regions_text">Please select countries and regions</string>
    <string-array name="menu_list_title_array">
        <item>My Account</item>
        <item>Billing</item>
        <item>Ride History</item>
        <item>How to Ride</item>
        <item>Report</item>
        <item>Support</item>
    </string-array>
    <string name="how_to_ride_a_duck">How to ride a Duck</string>
    <string name="scan_scooter">Scan Duck</string>
    <string name="refuse_hint">Refuse will not be able to download the update!</string>
    <string name="version_update">Update Available</string>
    <string name="version_update_content_text">There is a new update for the app. Please download to make the process easier and to keep unlocking new adventures.</string>
    <string name="update_now">Update Blue Duck</string>
    <string name="return_desktop">Press again to exit the app</string>
    <string name="unlocking_title_text">Unlocking</string>
    <string name="bluetooth_to_sweep_yards">Please turn on Bluetooth and scan the QR code to start riding.</string>
    <string name="unlock_failed">Unlock failed!</string>
    <string name="unlock_time_out">Unlock timeout, please try again!</string>
    <string name="do_not_return">Unlock pending, please do not exit.</string>
    <string name="my_account">My Account</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="my_account_email">Email</string>
    <string name="my_account_phone">Phone</string>
    <string name="my_account_date_of_birth">Date of Birth</string>
    <string name="drivers_license_number">Drivers License Number</string>
    <string name="my_account_password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="confirm_exit_login">Are you sure you want to log out?</string>
    <string name="exit">exit</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_password">Save Password</string>
    <string name="billing_title">Billing</string>
    <string name="add_payment_method_text">Add Payment Method</string>
    <string name="billing_description">Add your preferred payment method to unlock your Duck.</string>
    <string name="default_text">Default</string>
    <string name="default_card">Default card</string>
    <string name="delete_card">Delete card</string>
    <string name="history_title">History</string>
    <string name="you_havent_taken_a_ride">You Haven\'t Taken a Flight</string>
    <string name="history_description">You\ll see ride history here after your first ride.</string>
    <string name="take_my_first_ride">Take My First Ride</string>
    <string name="dollar">$</string>
    <string name="scooter_number_text">Duck:</string>
    <string name="history_details_date">Date</string>
    <string name="history_details_distance">Distance</string>
    <string name="history_details_scooter">Duck</string>
    <string name="history_details_ride_time">Ride Time</string>
    <string name="history_details_cost">Cost</string>
    <string name="history_details_contact_support">Contact Support</string>
    <string name="mile">%s mi</string>
    <string name="report_title">Report a Duck</string>
    <string name="duck_text">Duck #</string>
    <string name="select_issue">Select Issue</string>
    <string name="write_a_message">Write a Message</string>
    <string name="report_duck">Report Duck</string>
    <string name="issue_edit_hint">Scan your Duck or enter its ID</string>
    <string name="you_have_submitted">Your report has been submitted and will be reviewed shortly.</string>
    <string name="please_select_the_issue">Please select an issue</string>
    <string name="report_success_title">Your report was submitted</string>
    <string name="report_success_content">Thank you for your submission.  This helps us improve your future experience.</string>
    <string name="support_title">Support</string>
    <string name="scooter">Duck</string>
    <string name="battery">Battery</string>
    <string name="end">End</string>
    <string name="how_was_your_ride">How was your ride?</string>
    <string name="dont_rate">Not Now</string>
    <string name="report_scooter">Report Duck</string>
    <string name="border_dialog_title">NO PARKING ZONE</string>
    <string name="border_description_text">Uh oh. You\'ve parked outside of the service area, which means your ride is still going. To avoid fees, tap below to unlock the Duck and park it in a service area.</string>
    <string name="forbid_description_text">Oops, this area is not authorized for bike parking. Please return the Duck a designated area.</string>
    <string name="end_ride">End Ride</string>
    <string name="make_sure_you_are">Make sure you are</string>
    <string name="on_the_sidewalk">On the sidewalk</string>
    <string name="not_in_a_handicap_spot">Not in a handicap spot</string>
    <string name="away_from_ada_ramps">Away from ADA ramps</string>
    <string name="out_of_the_way">Out of the way</string>
    <string name="end_ride_safely">End Ride Safely</string>
    <string name="thanks_for_flying_with">Thanks for Flying with Blue Duck!</string>
    <string name="rate">Rate</string>
    <string name="rate_ride">Rate Ride</string>
    <string name="pick_from_an_issue">Select an issue</string>
    <string name="leave_a_comment">Leave a Comment</string>
    <string name="payment_dialog_title">Payment</string>
    <string name="payment_dialog_text">Just one more step before you can start your ride.</string>
    <string name="payment_dialog_btn_text">Add Payment Method</string>
    <string name="scan_title">Scan code on Duck</string>
    <string name="scan_enter_code">Enter Code</string>
    <string name="enter_code_in_scooter">Enter code in Duck</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="ride_btn">Ride</string>
    <string name="not_camera_permission">Please open the "photo and video" access rights in "setting - > application management - > BlueDuck-> permissions"!</string>
    <string name="not_location_permission">Please open the "locate" access rights in the "Settings - > application management - > BlueDuck-> permissions"!</string>
    <string name="scan_driver_license">Scan Driver License</string>
    <string name="scan_driver_license_description">Place your</string>
    <string name="scooter_id">Duck ID</string>
    <string name="loading">Loading&#8230;</string>
    <string name="download_fail">Download fail</string>
    <string name="download">Downloading&#8230;</string>
    <string name="download_success">Downloaded successfully</string>
    <string name="hint">Hint</string>
    <string name="network_message">No network available</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="from_library">From Library</string>
    <string name="remote_login">Because your account is logged in elsewhere, you are forced to log out.</string>
    <string name="socket_timeout_error">Socket timeout error</string>
    <string name="connect_error">Connection Error</string>
    <string name="request_error_text">Request error</string>
    <string name="internet_error">Please check your internet connection</string>
    <string name="runtime_error">Runtime error</string>
    <string name="unknown_host_please_check_network">Unable to connect the server. Please check your network.</string>
    <string name="unknown_error">Unknown error</string>
    <string name="gps_location_hint">Please enable GPS location services to locate Ducks</string>
    <string name="rejection_hint">Without GPS location services enabled, the map may be inaccurate!</string>
    <string name="fail_to_get">Get the captcha failure</string>
</resources>