<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:id="@+id/popup_button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/camera_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:background="@drawable/camera_btn_bg"/>

            <Button
                android:id="@+id/from_library_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1dp"
                android:text="@string/from_library"
                android:textAllCaps="false"
                android:background="@drawable/from_library_btn_bg"/>

            <Button
                android:id="@+id/window_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:background="@drawable/popup_cancel_btn_bg"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>