<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/login_image_one"/>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/enable_location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_location_text"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/main_colors"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/scan_driver_license_description_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/login_image_two"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/enable_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="20dp"
            android:background="@drawable/skip_btn_bg"
            android:layout_alignParentBottom="true"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="@string/yes_enable"/>

    </RelativeLayout>

</LinearLayout>