<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/date_dialog_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:id="@+id/version_update_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/description"
                android:layout_centerInParent="true"
                android:text="@string/version_update"/>


        </RelativeLayout>

        <TextView
            android:id="@+id/version_update_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center"
            android:text="@string/version_update_content_text"
            android:textColor="@color/description"
            android:lineSpacingExtra="6dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/update_now_btn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:background="@drawable/skip_btn_bg"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="@string/update_now"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>