<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/use_layout_bg"
    android:padding="20dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/description_color"
                android:text="@string/scooter"/>

            <TextView
                android:id="@+id/scooter_info_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_colors"
                android:textSize="25sp"
                android:text="0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/description_color"
                android:text="@string/battery"/>

            <TextView
                android:id="@+id/scooter_info_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/page_btn_color"
                android:textSize="25sp"
                android:text="0%"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/description_color"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/scooter_info_scan_layout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/skip_btn_bg"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/scan_scooter"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/scan"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/info_report_scooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/description_color"
        android:text="@string/report_scooter"/>

</LinearLayout>