<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/use_layout_bg"
    android:gravity="center_vertical"
    android:padding="20dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/description_color"
            android:text="@string/scooter"/>

        <TextView
            android:id="@+id/use_scooter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="0"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/description_color"
            android:text="@string/battery"/>

        <TextView
            android:id="@+id/use_scooter_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/page_btn_color"
            android:text="0%"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="right|center_vertical">

        <Button
            android:id="@+id/use_end_btn"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/skip_btn_red_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:text="@string/end"/>

    </LinearLayout>

</LinearLayout>